--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,9 @@ input {
 /* Consistent button styling */
 button {
   padding: 0.75rem 1.5rem;
+  min-height: 3.2rem;
   border-radius: 0.75rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 600;
   color: #fff;
   background-color: #009DE0;
@@ -55,31 +56,24 @@ button:hover {
   background-color: #008AC5;
 }
 
-/* Body styling for centering */
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
-/* Heading styles */
 h1 {
-  font-size: 4.5em;
+  font-size: 7vh;
   line-height: 1.3;
-  margin-bottom: 1rem; /* Added spacing below the header */
+}
+
+h2 {
+  font-size: 1.7vh;
+  line-height: 1.1;
 }
 
 label {
-  font-size: 1.2em;
+  font-size: 1.4em;
   font-weight: 500;
-}
-
-/* Error message styling */
-.text-red-500 {
-  color: #e3342f;
-  font-size: 0.875rem;
-  margin-top: 0.5rem;
-  text-align: left;
 }
