--- a/src/index.css
+++ b/src/index.css
@@ -2,43 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Center the entire calculator container */
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-/* Global font styling */
+
+/* font */
 :root {
   font-family: omnes-pro, sans-serif;
   font-weight: 500;
 }
 
-/* General input styling */
-input {
-  width: 100%; 
-  border-color: #D1D5DB;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  padding-left: 0.85rem;
-  padding-right: 0.85rem;
-  border-radius: 0.75rem;
-  border: rgba(32, 33, 37, 0.12) 2px solid;
-  color: #202125;
-  background: transparent;
-  font-size: 1rem; 
-  box-sizing: border-box;
-}
-
-/* Input container styling */
-.input-with-placeholder {
-  display: grid;
-  gap: 0.5rem;
-}
-
-/* Consistent button styling */
 button {
   padding: 0.75rem 1.5rem;
   min-height: 3.2rem;
@@ -54,23 +25,6 @@ button {
 
 button:hover {
   background-color: #008AC5;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 7vh;
-  line-height: 1.3;
-}
-
-h2 {
-  font-size: 1.7vh;
-  line-height: 1.1;
 }
 
 label {
